--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <title>LEB провайдер</title>
   <link rel="shortcut icon" href="favicon.png" type="image/png">
-<!--  <link rel="stylesheet" href="build/css/bootstrap.min.css">-->
-  <link rel="stylesheet" href="vendors/normalize.css">
+  <link rel="stylesheet" href="build/css/vendors.css">
   <link rel="stylesheet" href="build/css/styles.min.css">
 </head>
 
